globus-gridftp-server-control (3.2-1+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes, Warning Cleanup

 -- Globus Toolkit <support@globus.org>  Thu, 27 Feb 2014 16:48:43 -0500

globus-gridftp-server-control (3.1-1+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes

 -- Globus Toolkit <support@globus.org>  Wed, 12 Feb 2014 18:31:08 -0500

globus-gridftp-server-control (3.0-2+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes

 -- Globus Toolkit <support@globus.org>  Wed, 12 Feb 2014 17:19:21 -0500

globus-gridftp-server-control (3.0-1+gt6.@distro@) @distro@; urgency=low

  * Repackage for GT6 without GPT

 -- Globus Toolkit <support@globus.org>  Tue, 21 Jan 2014 13:26:01 -0500

globus-gridftp-server-control (2.10-1) unstable; urgency=low

  * GT-472: GridFTP server fails to detect client disconnection with piplining

 -- Globus Toolkit <support@globus.org>  Tue, 15 Oct 2013 00:26:41 -0500

globus-gridftp-server-control (2.9-1) unstable; urgency=low

  * GT-396: fix mlst on filenames that end in a newline
  * GT-412: add -version-tag to set an identifier in the server version string
  * fix minor memory leaks
  * fix mlsx symlink target not urlencoding properly

 -- Globus Toolkit <support@globus.org>  Wed, 05 Jun 2013 01:52:26 -0500

globus-gridftp-server-control (2.8-1) unstable; urgency=low

  * GT-302: Add initial sharing support to the GridFTP server
  * GT-356: Add configuration and a command to make the sharing authorization file easier to manage

 -- Globus Toolkit <support@globus.org>  Mon, 04 Feb 2013 10:33:22 -0600

globus-gridftp-server-control (2.7-2) unstable; urgency=low

  * GT 5.2.2 final

 -- Globus Toolkit <support@globus.org>  Mon, 16 Jul 2012 15:25:43 -0400

globus-gridftp-server-control (2.7-1) unstable; urgency=low

  * GT-172: Removed custom MLSx tag feature
  * GT-244: Cleaned up memory leaks
  * GT-243: Fix needless frontend->backend connections

 -- Globus Toolkit <support@globus.org>  Thu, 12 Jul 2012 16:59:05 -0400
